--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.2.+'
+
 }
