--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
         <activity
             android:name=".Receipents"
-            android:label="@string/title_activity_receipents" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
